app-code/homeassistant/homeassistant-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`ha.nexus.link`) || Host(`homeassistant.nexus.link`)
      kind: Rule
      services: [{name: homeassistant-svc, port: 8123}]
